--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -10,6 +10,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Install
+        run: sudo apt install -y lcov
 
       - name: Configure CMake
         run: cmake -B ${{github.workspace}}/build -DENABLE_COV=on
