--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,7 +17,7 @@ jobs:
         run: cmake -B ${{github.workspace}}/build -DENABLE_COV=on
 
       - name: Build
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        run: cmake --build ${{github.workspace}}/build --parallel
 
       - name: Test
         working-directory: ${{github.workspace}}/build
