add branch coverage

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -36,5 +36,8 @@ if(ENABLE_COV)
   )
   SETUP_TARGET_FOR_COVERAGE_LCOV(NAME coverage
     EXECUTABLE serialize_integer
-    DEPENDENCIES serialize_integer)
+    DEPENDENCIES serialize_integer
+    LCOV_ARGS --rc lcov_branch_coverage=1
+    GENHTML_ARGS --rc lcov_branch_coverage=1
+  )
 endif()
