feat: support dynamic array serialization

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ function(TESTCASE test_name)
 endfunction()
 
 TESTCASE(serialize_integer)
+TESTCASE(serialize_dyn_array)
 
 if(ENABLE_COV)
   # Coverage setup
