test: add span eq and ne testcase

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,6 +27,7 @@ TESTCASE(serialize_integer)
 TESTCASE(serialize_dyn_array)
 TESTCASE(serialize_static_array)
 TESTCASE(size_traits)
+TESTCASE(span)
 
 if(ENABLE_COV)
   # Coverage setup
