--- a/tests/BUILD
+++ b/tests/BUILD
@@ -4,6 +4,16 @@ test_suite(
 )
 
 cc_test(
+    name = "deserialized_type",
+    size = "small",
+    srcs = ["deserialized_type.cpp"],
+    deps = [
+        "//:embedded_serialization_inner",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_test(
     name = "serialize_dyn_array",
     size = "small",
     srcs = ["serialize_dyn_array.cpp"],
