test: add tuple test

--- a/tests/BUILD
+++ b/tests/BUILD
@@ -44,6 +44,16 @@ cc_test(
 )
 
 cc_test(
+    name = "serialize_tuple",
+    size = "small",
+    srcs = ["serialize_tuple.cpp"],
+    deps = [
+        "//:embedded_serialization_inner",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_test(
     name = "size_traits",
     size = "small",
     srcs = ["size_traits.cpp"],
