docs: add example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ if(NOT DEFINED EMBEDDED_SERIALIZATION_INTEGRATION)
     enable_testing()
     add_subdirectory(tests)
   endif()
+
+  if(NOT DISABLE_EXAMPLE)
+    add_subdirectory(example)
+  endif()
 else()
   message(STATUS "EMBEDDED_SERIALIZATION_INTEGRATION mode")
 endif()
