docs: add example (#15)
* fix: use additional variant to control unittest
* fix: const type template bug
* docs: add example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,20 @@ cmake_minimum_required(VERSION 3.13.4)
 project(embedded-serialization)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS on)
-SET(CMAKE_CXX_FLAGS "-Wall")
 list(APPEND CMAKE_MODULE_PATH
   ${PROJECT_SOURCE_DIR}/cmake-modules)
 
-if(NOT DISABLE_TEST)
-  enable_testing()
-  add_subdirectory(tests)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
+
+if(NOT DEFINED EMBEDDED_SERIALIZATION_INTEGRATION)
+  if(NOT DISABLE_TEST)
+    enable_testing()
+    add_subdirectory(tests)
+  endif()
+
+  if(NOT DISABLE_EXAMPLE)
+    add_subdirectory(example)
+  endif()
+else()
+  message(STATUS "EMBEDDED_SERIALIZATION_INTEGRATION mode")
 endif()
