docs: add user defined class example

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(CMAKE_CXX_STANDARD 11)
 SET(CMAKE_CXX_FLAGS "-Wall")
 
-add_executable(embedded_serialization_demo main.cpp)
+add_executable(embedded_serialization_tuple_example tuple_example.cpp)
+add_executable(embedded_serialization_class_example class_example.cpp)
