chore: update bazel test command

--- a/tests/BUILD
+++ b/tests/BUILD
@@ -1,82 +1,7 @@
-test_suite(
+cc_test(
     name = "tests",
-    tags = ["small"],
-)
-
-cc_test(
-    name = "deserialized_type",
     size = "small",
-    srcs = ["deserialized_type.cpp"],
-    deps = [
-        "//:embedded_serialization_inner",
-        "@com_google_googletest//:gtest_main",
-    ],
-)
-
-cc_test(
-    name = "serialize_dyn_array",
-    size = "small",
-    srcs = ["serialize_dyn_array.cpp"],
-    deps = [
-        "//:embedded_serialization_inner",
-        "@com_google_googletest//:gtest_main",
-    ],
-)
-
-cc_test(
-    name = "serialize_integer",
-    size = "small",
-    srcs = ["serialize_integer.cpp"],
-    deps = [
-        "//:embedded_serialization_inner",
-        "@com_google_googletest//:gtest_main",
-    ],
-)
-
-cc_test(
-    name = "serialize_static_array",
-    size = "small",
-    srcs = ["serialize_static_array.cpp"],
-    deps = [
-        "//:embedded_serialization_inner",
-        "@com_google_googletest//:gtest_main",
-    ],
-)
-
-cc_test(
-    name = "serialize_tuple",
-    size = "small",
-    srcs = ["serialize_tuple.cpp"],
-    deps = [
-        "//:embedded_serialization_inner",
-        "@com_google_googletest//:gtest_main",
-    ],
-)
-
-cc_test(
-    name = "serialize_user_defined",
-    size = "small",
-    srcs = ["serialize_user_defined.cpp"],
-    deps = [
-        "//:embedded_serialization_inner",
-        "@com_google_googletest//:gtest_main",
-    ],
-)
-
-cc_test(
-    name = "size_traits",
-    size = "small",
-    srcs = ["size_traits.cpp"],
-    deps = [
-        "//:embedded_serialization_inner",
-        "@com_google_googletest//:gtest_main",
-    ],
-)
-
-cc_test(
-    name = "span",
-    size = "small",
-    srcs = ["span.cpp"],
+    srcs = glob(["*.cpp"]),
     deps = [
         "//:embedded_serialization_inner",
         "@com_google_googletest//:gtest_main",
