feat: support enum

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -26,6 +26,7 @@ endfunction()
 TESTCASE(deserialized_type)
 TESTCASE(serialize_integer)
 TESTCASE(serialize_dyn_array)
+TESTCASE(serialize_enum)
 TESTCASE(serialize_static_array)
 TESTCASE(serialize_tuple)
 TESTCASE(serialize_user_defined)
